--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <section>
       <h2>Projects</h2>
       <ul>
-        <li><a href="https://github.com/nido007/go-projects">Golang Projects</a></li>
-        <li><a href="https://github.com/nido007/iminhas.com-site">iminhas.com Website</a></li>
+        <li><a href="https://github.com/nido007/go-projects">Golang Journey </a></li>
+        <li><a href="https://github.com/nido007/iminhas.com-site">iminhas.com </a></li>
       </ul>
     </section>
     <section>
