--- a/index.html
+++ b/index.html
@@ -1,32 +1,19 @@
-<!-- iminhas.com | Static Portfolio Template -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>iminhas.com | DevOps Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>iminhas.com | Cloud Engineer</title>
 </head>
 <body>
-  <header>
-    <h1>Welcome to iminhas.com</h1>
-    <p>A portfolio by Mohammad Naveed Iqbal Minhas</p>
-  </header>
-  <main>
-    <section>
-      <h2>Projects</h2>
-      <ul>
-        <li><a href="https://github.com/nido007/go-projects">Golang Journey at 01Founders </a></li>
-        <li><a href="https://github.com/nido007/iminhas.com-site">iminhas.com </a></li>
-      </ul>
-    </section>
-    <section>
-      <h2>About Me</h2>
-      <p>I am an aspiring DevOps and Full Stack Engineer learning Golang, Docker, Kubernetes, and Cloud technologies.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 iminhas.com</p>
-  </footer>
+  <h1>Welcome to iminhas.com!</h1>
+  <p>This is the DevOps Portfolio of Naveed Iqbal 🚀</p>
+
+  <h2>About Me</h2>
+  <p>I’m a Cloud Engineer learning DevOps, Go, AWS, and more.</p>
+
+  <!-- 🚀 New Image Section -->
+  <h2>My DevOps Avatar</h2>
+  <img src="cloud-engineer-card.png" alt="Naveed Iqbal - Cloud Engineer" width="400"/>
+
 </body>
 </html>
