Added Dockerfile, updated project with Docker and README

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
   <!-- 🚀 New Image Section -->
   <h2>My DevOps Avatar</h2>
-  <img src="cloud-engineer-card.png" alt="Naveed Iqbal - Cloud Engineer" width="400"/>
-
+  <img src="./cloud-engineer-card.png" alt="Naveed Iqbal - Cloud Engineer" width="400">
 </body>
 </html>
