Updated homepage with blog link, subscribe form, and SEO improvements

--- a/index.html
+++ b/index.html
@@ -1,18 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>iminhas.com | Cloud Engineer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Naveed Iqbal - DevOps Engineer Portfolio. Learn about my projects, blog posts, and journey into cloud technologies.">
+  <meta name="keywords" content="DevOps, Cloud Computing, Golang, Web Development, Portfolio, Blog">
+  <title>Welcome to iminhas.com</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #555;
+      max-width: 600px;
+    }
+    a.button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 20px;
+      background-color: #007BFF;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 18px;
+    }
+    form {
+      margin-top: 30px;
+    }
+    input[type="email"] {
+      padding: 10px;
+      width: 250px;
+      margin-right: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button[type="submit"] {
+      padding: 10px 20px;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    footer {
+      margin-top: 50px;
+      color: #888;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to iminhas.com!</h1>
-  <p>This is the DevOps Portfolio of Naveed Iqbal 🚀</p>
 
-  <h2>About Me</h2>
-  <p>I’m a Cloud Engineer learning DevOps, Go, AWS, and more.</p>
+  <h1>👋 Welcome to iminhas.com</h1>
+  <p>I'm Naveed Iqbal, a passionate DevOps and Cloud enthusiast, sharing my learning journey and projects. Follow my blog to stay updated!</p>
 
-  <!-- 🚀 New Image Section -->
-  <h2>My DevOps Avatar</h2>
-  <img src="./cloud-engineer-card.png" alt="Naveed Iqbal - Cloud Engineer" width="400">
+  <a href="blog.html" class="button">📝 Visit My Blog</a>
+
+  <form action="https://formsubmit.co/YOUR-EMAIL@example.com" method="POST">
+    <input type="email" name="email" required placeholder="Enter your email">
+    <button type="submit">Subscribe</button>
+  </form>
+
+  <footer>
+    © 2025 iminhas.com | Built with ❤️ for the tech community
+  </footer>
+
 </body>
 </html>
