Updated homepage with profile picture, blog snapshot, and created blog page

--- a/.github/workflows/blog.html
+++ b/.github/workflows/blog.html
@@ -2,14 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Read the latest blogs on DevOps, Cloud Computing, Golang, and Web Development.">
-  <meta name="keywords" content="DevOps Blog, Cloud Blog, Web Development Blog, Golang Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Blog by Naveed Iqbal sharing DevOps, Cloud, and Web Development insights.">
+  <meta name="keywords" content="DevOps Blog, Cloud Blog, Web Development Blog">
   <title>Blog - iminhas.com</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #555;
+      margin-top: 20px;
+    }
+    a {
+      display: inline-block;
+      margin-top: 30px;
+      color: #007BFF;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; text-align: center; padding: 50px;">
-  <h1>🚀 New Blogs Coming Soon!</h1>
-  <p>Stay tuned! I am writing articles to help developers grow their DevOps and Cloud skills.</p>
+<body>
+
+  <h1>🚀 Blog Coming Soon!</h1>
+  <p>I'm excited to start sharing my journey into DevOps, Cloud Engineering, and Web Development. Stay tuned for amazing content!</p>
+
   <a href="index.html">← Back to Home</a>
+
 </body>
 </html>
