Updated homepage with latest blog post preview and subscription form

--- a/index.html
+++ b/index.html
@@ -2,114 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Naveed Iqbal - DevOps Engineer Portfolio. Learn about my projects, blog posts, and journey into cloud technologies.">
-  <meta name="keywords" content="DevOps, Cloud Computing, Golang, Web Development, Portfolio, Blog">
-  <title>Welcome to iminhas.com</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      text-align: center;
-    }
-    img.profile {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      margin-top: 20px;
-      object-fit: cover;
-    }
-    h1 {
-      color: #333;
-      margin-top: 20px;
-    }
-    p {
-      color: #555;
-      max-width: 600px;
-      margin: 20px;
-    }
-    a.button {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 20px;
-      background-color: #007BFF;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-size: 18px;
-    }
-    form {
-      margin-top: 30px;
-    }
-    input[type="email"] {
-      padding: 10px;
-      width: 250px;
-      margin-right: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button[type="submit"] {
-      padding: 10px 20px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .blog-preview {
-      margin-top: 40px;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      width: 90%;
-      max-width: 600px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .blog-preview h2 {
-      margin-bottom: 10px;
-    }
-    .blog-preview a {
-      color: #007BFF;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    footer {
-      margin-top: 50px;
-      color: #888;
-      font-size: 14px;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Portfolio of Naveed Iqbal - Cloud Engineer learning DevOps, Cloud, and Web Technologies.">
+  <meta name="keywords" content="Cloud Engineer, DevOps Portfolio, iminhas.com, Naveed Iqbal, Golang Developer, Web Developer">
+  <title>iminhas.com | Cloud Engineer Portfolio</title>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; text-align: center;">
 
-  <img src="cloud-engineer-card.png" alt="Profile Picture" class="profile">
+  <!-- Profile Picture -->
+  <img src="profile.jpg" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%; margin-top: 20px;">
 
-  <h1>👋 Welcome to iminhas.com</h1>
-  <p>I'm Naveed Iqbal, a passionate DevOps and Cloud enthusiast, sharing my learning journey and projects. Follow my blog to stay updated!</p>
+  <!-- Welcome Text -->
+  <h1 style="margin-top: 20px;">👋 Welcome to iminhas.com!</h1>
+  <p>This is the DevOps and Cloud Learning Journey of <strong>Naveed Iqbal</strong>.</p>
 
-  <a href="blog.html" class="button">📝 Visit My Blog</a>
+  <!-- Visit Blog Button -->
+  <a href="blog.html" style="display: inline-block; padding: 10px 20px; background-color: #007BFF; color: white; text-decoration: none; border-radius: 5px; margin-top: 20px;">📝 Visit My Blog</a>
 
-  <form action="https://formsubmit.co/itsnav79@gmail.com" method="POST">
-    <input type="email" name="email" required placeholder="Enter your email">
-    <button type="submit">Subscribe</button>
-  </form>
-
-  <div class="blog-preview">
-    <h2>📚 Latest Blog</h2>
-    <p><strong>First Blog Coming Soon:</strong> My experience setting up Docker and GitHub Actions for CI/CD automation!</p>
-    <a href="blog.html">Read More →</a>
+  <!-- Subscribe Form -->
+  <div style="margin-top: 40px;">
+    <h2>📬 Subscribe for Updates</h2>
+    <form action="https://formsubmit.co/YOUR-EMAIL@example.com" method="POST">
+      <input type="email" name="email" required placeholder="Enter your email" style="padding: 10px; width: 250px;">
+      <button type="submit" style="padding: 10px 20px; background-color: #28A745; color: white; border: none; border-radius: 5px;">Subscribe</button>
+    </form>
   </div>
 
-  <footer>
-    © 2025 iminhas.com | Built with ❤️ for the tech community
+  <!-- Latest Blog Preview Section -->
+  <div style="margin-top: 50px; text-align: left;">
+    <h2>📰 Latest Blog Post</h2>
+
+    <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin-top: 20px;">
+      <img src="A_digital_illustration_accompanying_a_blog_post_ti.png" alt="AI Blog Thumbnail" style="width: 100%; border-radius: 8px;">
+      <h3 style="margin-top: 15px;">How AI is Transforming Software Development and DevOps</h3>
+      <p>Explore how AI tools like GitHub Copilot and AWS predictive scaling are reshaping the future of IT, DevOps, and Software Engineering...</p>
+      <a href="blog1.html" style="text-decoration: none; color: #007BFF;">Read Full Blog →</a>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer style="margin-top: 50px; font-size: 14px; color: #666;">
+    &copy; 2024 Naveed Iqbal - All rights reserved.
   </footer>
 
 </body>
 </html>
+
