Added images for profile and blog post

--- a/blog1.html
+++ b/blog1.html
@@ -10,7 +10,7 @@
 <body style="font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px;">
 
   <!-- Blog Featured Image -->
-  <img src="A_digital_illustration_accompanying_a_blog_post_ti.png" alt="AI in Software Development and DevOps" style="width: 100%; border-radius: 10px;">
+  <img src="A_digital_pic1.png" alt="AI in Software Development and DevOps" style="width: 100%; border-radius: 10px;">
 
   <!-- Blog Title -->
   <h1 style="margin-top: 20px;">How AI is Transforming Software Development and DevOps in 2024</h1>
