--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; text-align: center;">
 
   <!-- Profile Picture -->
-  <img src="profile.jpg" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%; margin-top: 20px;">
+  <img src="cloud-engineer-card" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%; margin-top: 20px;">
 
   <!-- Welcome Text -->
   <h1 style="margin-top: 20px;">👋 Welcome to iminhas.com!</h1>
@@ -33,7 +33,7 @@
     <h2>📰 Latest Blog Post</h2>
 
     <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin-top: 20px;">
-      <img src="A_digital_illustration_accompanying_a_blog_post_ti.png" alt="AI Blog Thumbnail" style="width: 100%; border-radius: 8px;">
+      <img src="A_digital_pic1.png" alt="AI Blog Thumbnail" style="width: 100%; border-radius: 8px;">
       <h3 style="margin-top: 15px;">How AI is Transforming Software Development and DevOps</h3>
       <p>Explore how AI tools like GitHub Copilot and AWS predictive scaling are reshaping the future of IT, DevOps, and Software Engineering...</p>
       <a href="blog1.html" style="text-decoration: none; color: #007BFF;">Read Full Blog →</a>
