--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; text-align: center;">
 
   <!-- Profile Picture -->
-  <img src="cloud-engineer-card" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%; margin-top: 20px;">
-
+  <img src="ai-blog.png" alt="AI in Software Development and DevOps" style="width: 100%; border-radius: 10px;">
+  
   <!-- Welcome Text -->
   <h1 style="margin-top: 20px;">👋 Welcome to iminhas.com!</h1>
   <p>This is the DevOps and Cloud Learning Journey of <strong>Naveed Iqbal</strong>.</p>
@@ -47,4 +47,3 @@
 
 </body>
 </html>
-
