Fixed blog image filename and updated links second try

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Profile Picture -->
   <img src="ai-blog.png" alt="AI in Software Development and DevOps" style="width: 100%; border-radius: 10px;">
-  
+
   <!-- Welcome Text -->
   <h1 style="margin-top: 20px;">👋 Welcome to iminhas.com!</h1>
   <p>This is the DevOps and Cloud Learning Journey of <strong>Naveed Iqbal</strong>.</p>
@@ -33,7 +33,7 @@
     <h2>📰 Latest Blog Post</h2>
 
     <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin-top: 20px;">
-      <img src="A_digital_pic1.png" alt="AI Blog Thumbnail" style="width: 100%; border-radius: 8px;">
+      <img src="AI-Driven.png" alt="AI Blog Thumbnail" style="width: 100%; border-radius: 8px;">
       <h3 style="margin-top: 15px;">How AI is Transforming Software Development and DevOps</h3>
       <p>Explore how AI tools like GitHub Copilot and AWS predictive scaling are reshaping the future of IT, DevOps, and Software Engineering...</p>
       <a href="blog1.html" style="text-decoration: none; color: #007BFF;">Read Full Blog →</a>
