Fixed blog image filename and updated third try picture resize

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; text-align: center;">
 
   <!-- Profile Picture -->
-  <img src="ai-blog.png" alt="AI in Software Development and DevOps" style="width: 100%; border-radius: 10px;">
+  <img src="ai-blog.png" alt="AI in Software Development and DevOps" style="width: 80%; max-width: 600px; display: block; margin: 20px auto; border-radius: 10px;">
 
   <!-- Welcome Text -->
   <h1 style="margin-top: 20px;">👋 Welcome to iminhas.com!</h1>
