--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; text-align: center;">
 
   <!-- Profile Picture -->
-  <img src="ai-blog.png" alt="AI in Software Development and DevOps" style="width: 80%; max-width: 600px; display: block; margin: 20px auto; border-radius: 10px;">
+  <img src="profile.jpg" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%; margin-top: 20px;">
 
   <!-- Welcome Text -->
   <h1 style="margin-top: 20px;">👋 Welcome to iminhas.com!</h1>
@@ -30,13 +30,22 @@
 
   <!-- Latest Blog Preview Section -->
   <div style="margin-top: 50px; text-align: left;">
-    <h2>📰 Latest Blog Post</h2>
+    <h2>📰 Latest Blog Posts</h2>
 
+    <!-- Blog 1 Card -->
     <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin-top: 20px;">
-      <img src="AI-Driven.png" alt="AI Blog Thumbnail" style="width: 100%; border-radius: 8px;">
+      <img src="ai-blog.png" alt="AI Blog Thumbnail" style="width: 100%; max-width: 600px; border-radius: 8px;">
       <h3 style="margin-top: 15px;">How AI is Transforming Software Development and DevOps</h3>
       <p>Explore how AI tools like GitHub Copilot and AWS predictive scaling are reshaping the future of IT, DevOps, and Software Engineering...</p>
       <a href="blog1.html" style="text-decoration: none; color: #007BFF;">Read Full Blog →</a>
+    </div>
+
+    <!-- Blog 2 Card -->
+    <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin-top: 30px;">
+      <img src="A_digital_illustration_features_a_human_side_profi.png" alt="AIOps Blog Thumbnail" style="width: 100%; max-width: 600px; border-radius: 8px;">
+      <h3 style="margin-top: 15px;">The Rise of AIOps: How AI is Transforming DevOps and IT Operations</h3>
+      <p>Learn how Artificial Intelligence is redefining IT operations with predictive analytics, automated incident management, and smarter DevOps strategies...</p>
+      <a href="blog2.html" style="text-decoration: none; color: #007BFF;">Read Full Blog →</a>
     </div>
   </div>
 
