--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
       <a href="blog2.html" style="text-decoration: none; color: #007BFF;">Read Full Blog →</a>
     </div>
   </div>
+  <!-- Blog 3 Card -->
+  <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin-top: 30px;">
+    <img src="AIpic4.png" alt="AI in Cybersecurity" style="width: 100%; max-width: 600px; border-radius: 8px;">
+    <h3 style="margin-top: 15px;">AI in Cybersecurity: How Machine Learning is Fighting Modern Threats</h3>
+    <p>Discover how AI is defending against advanced cyberattacks using real-time detection, anomaly prediction, and automated security responses...</p>
+    <a href="blog3.html" style="text-decoration: none; color: #007BFF;">Read Full Blog →</a>
+  </div>
 
   <!-- Footer -->
   <footer style="margin-top: 50px; font-size: 14px; color: #666;">
