--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(20px);
             border-radius: 24px;
-            padding: 2.5rem;
+            padding: 3rem;
             border: 1px solid rgba(255, 255, 255, 0.2);
             text-align: center;
             transform: perspective(1000px) rotateY(-5deg);
             transition: all 0.3s ease;
-            max-width: 420px;
+            max-width: 600px;
         }
 
         .profile-card:hover {
@@ -299,24 +299,24 @@
         }
 
         .profile-image {
-            width: 300px;
-            height: 300px;
+            width: 525px;
+            height: 525px;
             border-radius: 20px;
             margin: 0 auto 2rem;
-            border: 6px solid rgba(255, 255, 255, 0.4);
+            border: 8px solid rgba(255, 255, 255, 0.4);
             object-fit: cover;
             box-shadow: 
-                0 20px 40px rgba(0, 0, 0, 0.3),
-                0 0 0 1px rgba(255, 255, 255, 0.1) inset;
+                0 25px 50px rgba(0, 0, 0, 0.4),
+                0 0 0 2px rgba(255, 255, 255, 0.1) inset;
             transition: all 0.3s ease;
         }
 
         .profile-card:hover .profile-image {
-            transform: scale(1.05);
+            transform: scale(1.02);
             border-color: rgba(255, 255, 255, 0.6);
             box-shadow: 
-                0 25px 50px rgba(0, 0, 0, 0.4),
-                0 0 0 1px rgba(255, 255, 255, 0.2) inset;
+                0 30px 60px rgba(0, 0, 0, 0.5),
+                0 0 0 2px rgba(255, 255, 255, 0.2) inset;
         }
 
         .profile-title {
@@ -742,6 +742,16 @@
                 gap: 3rem;
             }
 
+            .profile-card {
+                max-width: 500px;
+                padding: 2.5rem;
+            }
+
+            .profile-image {
+                width: 450px;
+                height: 450px;
+            }
+
             .blog-card {
                 grid-template-columns: 1fr;
                 max-width: 600px;
@@ -777,6 +787,17 @@
                 padding: 2rem 0;
             }
 
+            .profile-card {
+                max-width: 90%;
+                padding: 2rem;
+            }
+
+            .profile-image {
+                width: 350px;
+                height: 350px;
+                border-width: 6px;
+            }
+
             .hero-actions {
                 flex-direction: column;
                 align-items: center;
@@ -807,11 +828,13 @@
 
             .profile-card {
                 padding: 1.5rem;
+                max-width: 95%;
             }
 
             .profile-image {
-                width: 150px;
-                height: 150px;
+                width: 280px;
+                height: 280px;
+                border-width: 4px;
             }
 
             .tech-card {
