linkedin link updated

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             
             <div class="social-links">
                 <a href="https://twitter.com/_iminhas" target="_blank">Twitter</a>
-                <a href="https://linkedin.com/in/naveedminhas" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/naveed-minhas/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/nido007" target="_blank">GitHub</a>
             </div>
         </header>
