Day 2: Added professional profile picture to header

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Naveed Minhas</h1>
-            <p class="subtitle">Full-Stack Developer in Training</p>
-            <p class="week-info">Week 3/36 • 01Founders Fellow • Building in Public</p>
-        </header>
+      <header>
+    <img src="assets/images/profile.jpg" alt="Naveed Minhas" class="profile-pic">
+    <h1>Naveed Minhas</h1>
+    <p class="subtitle">Full-Stack Developer in Training</p>
 
         <section class="about">
             <h2>About Me</h2>
