Update: Changed week to 7/36

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             
             <p>After years in transport services and completing DevOps training, I decided to learn to code properly. I'm building real projects and documenting my journey publicly.</p>
             
-            <p>Target: Job-ready by April 2026. Following a 36-week intensive learning path.</p>
+            <p class="week-info">Week 7/36 • 01Founders Fellow • Building in Public</p>
         </section>
 
         <section class="projects">
