--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
         <section class="about">
             <h2>About Me</h2>
-            <p>I'm Naveed, a 45-year-old career changer transitioning into Full-Stack Development through intensive dual-track training.
+            <p>I'm Naveed, in the process of career change, transitioning into Full-Stack Development through intensive dual-track training.
 
 Currently in:
 - 01Founders fellowship (Month 12+): Completed Golang, finishing JavaScript
